added documentation for image
